docs: update README.md to english